--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 class="title">title</h1>
-    <div class="div">
-        <input class="input" type="text">
-    </div>
+    <div id="app"></div>
 </body>
 </html>
